K8s-Exercises/task_03_Networking_and_Ingress/mini_project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: app-ingress
spec:
  tls:
  - hosts:
    - frontend.team-alpha.svc.cluster.local
    - frontend.team-alpha.svc
    - frontend.team-alpha
    secretName: alpha-tls-secret
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Exact
      - backend:
          service:
            name: api-svc
            port:
              number: 80
        path: /api
        pathType: Exact
status:
  loadBalancer: {}
