K8s-Exercises/task_03_Networking_and_Ingress/mini_project/network-policies.yml
# `frontend` can reach `api`
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-network-policy
  namespace: team-alpha
spec:
  podSelector:
    matchLabels:
      app: api

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: alpha
      podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: database
    ports:
    - protocol: TCP
      port: 5678

---
# `api` can reach `database`
# automatically `frontend` CANNOT reach `database`
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-network-policy
  namespace: team-alpha
spec:
  podSelector:
    matchLabels:
      app: database

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: alpha
      podSelector:
        matchLabels:
          app: api
    ports:
    - protocol: TCP
      port: 5678

---
# `frontend` can reach `api`
# This is added because deny all is also applied which block 
  # frontend -> api
  # internet -> frontend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: team-alpha
spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 80

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          team: alpha
      podSelector:
        matchLabels:
          app: api
    ports:
    - protocol: TCP
      port: 5678

---
# Default deny all for the namespace but DNS (port 53) egress allowed
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-allow-dns-policy
  namespace: team-alpha
spec:
  podSelector: {}

  policyTypes:
  - Ingress
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
